--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
 
+@variant dark (&:where(.dark, .dark *));
+
 
 html {
   scroll-behavior: smooth;
